Ensure discussion titles take up full width of card to minimise white space

--- a/futurenhs.app/UI/scss/modules/card/_card.scss
+++ b/futurenhs.app/UI/scss/modules/card/_card.scss
@@ -61,6 +61,10 @@ $card-hero-padding: 10px;
         margin-bottom: $nhsuk-spacing-point-2;
         max-width: 60%;
         align-self: center;
+
+        &_discussion-title {
+            max-width: 100%;
+        }
     }
 
     &_body {
